refactor: sonarqube analyses